--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,6 +17,42 @@
         android:gravity="center"
         android:paddingBottom="20dp" />
 
+    <!-- Thought of the Day Layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:elevation="6dp"
+        android:shadowColor="#888888"
+        android:gravity="center"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/thought_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Fetching thought..."
+            android:textSize="20sp"
+            android:textStyle="italic"
+            android:textAlignment="center"
+            android:background="@drawable/thought_bg"
+            android:elevation="6dp"
+            android:shadowColor="#888888"
+            android:textColor="#0066CC"/>
+
+        <ImageView
+            android:id="@+id/refresh_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@android:drawable/ic_popup_sync"
+            android:padding="5dp"
+            android:contentDescription="Refresh Thought"/>
+    </LinearLayout>
+
+
     <!-- Scrollable Grid -->
     <ScrollView
         android:layout_width="match_parent"
@@ -34,10 +69,7 @@
             android:padding="10dp"
             android:rowCount="3"
             android:layout_gravity="center"
-            android:orientation="horizontal">
-
-        </GridLayout>
-
+            android:orientation="horizontal" />
     </ScrollView>
 
     <!-- Logout Button -->
@@ -52,5 +84,4 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"/>
-
 </LinearLayout>
