--- a/app/src/main/res/layout/activity_flashlight.xml
+++ b/app/src/main/res/layout/activity_flashlight.xml
@@ -16,7 +16,7 @@
         android:paddingBottom="16dp"/>
 
     <Button
-        android:id="@+id/btn_flashlight"
+        android:id="@+id/toggleFlashlightBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Toggle Flashlight"
